--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
 
 		</header>
 
-
 		<section id="Title">
 			<div class="container jumbotron hide">
 				<div class="row">
@@ -81,19 +80,18 @@
 			</div>
 		</section>
 
-
 	<main class="container hide">
 		<div id="PillsNavigation" class="row">
 			<ul class="nav nav-tabs col-xs-12"  role="tablist">
 				<li role="presentation" id="HomeTab" class="active"><a href="#Search" aria-controls="Search" role="tab" data-toggle="tab">Home</a></li>
 				<li role="presentation" id="ChatTab"><a href="#Chat" aria-controls="Chat" role="tab" data-toggle="tab">Chat</a></li>
+				<li role="presentation" id="MeetupTab"><a href="#Meetup" aria-controls="Chat" role="tab" data-toggle="tab">Meet up Details</a></li>				
 			</ul>
 		</div>
 		<section id="TabContent" class="row">
 			<div class="col-xs-12">
 				<div class="tab-content">
-					<div role="tabpanel" class="tab-pane fade in active" id="Search">
-					</div>
+					<div role="tabpanel" class="tab-pane fade in active" id="Search"></div>				
 					<div role="tabpanel" class="tab-pane fade" id="Chat">
 			    		<div class="row">
 			    			<div class="col-xs-12">
@@ -106,7 +104,7 @@
 			    							<div id="ChatBox" style="width:auto;height:130px;max-height:130px;overflow:auto">
 			    							</div>			    						
 			    						</div>
-			    						<div class="col-sm-2" style="border:1px solid grey;text-align:center">
+			    						<div class="col-sm-2" id="ChatList" style="border:1px solid grey;text-align:center">
 			    							<div class="row">
 			    								<b>Active Users</b>
 			    							</div>
@@ -129,6 +127,8 @@
 			    			</div>
 			    		</div>
 					</div>
+					<div role="tabpanel" class="tab-pane fade" id="Meetup">
+					</div>	
 				</div>
 			</div>
 		</section>
