--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 			<ul class="nav nav-tabs col-xs-12"  role="tablist">
 				<li role="presentation" id="HomeTab" class="active"><a href="#Search" aria-controls="Search" role="tab" data-toggle="tab">Home</a></li>
 				<li role="presentation" id="ChatTab"><a href="#Chat" aria-controls="Chat" role="tab" data-toggle="tab">Chat</a></li>
+				<li role="presentation" id="MeetupTab"><a href="#Meetup" aria-controls="Chat" role="tab" data-toggle="tab">Meet up Details</a></li>
 			</ul>
 		</div>
 		<!-- end PillsNavigation -->
@@ -117,6 +118,7 @@
 							</div>
 						</div>
 					</div>
+					<div role="tabpanel" class="tab-pane fade" id="Meetup"></div>
 				</div>
 			</div>
 		</section>
