--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>App</title>
+		<title>Let's Meet</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Latest compiled and minified CSS -->
 		<link href="https://fonts.googleapis.com/css?family=Reem+Kufi" rel="stylesheet">
